// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot when loaded 1`] = `
<div
  class="circle-loader load-complete"
>
  <div
    class="checkmark draw"
  />
</div>
`;

exports[`matches the snapshot when loading 1`] = `
<div
  class="circle-loader "
>
  <div
    class="checkmark draw"
  />
</div>
`;
